<resources>
    <string name="wallet_app_name">DipperWallet</string>

    <string name="tabWallet">钱包</string>
    <string name="tabTokens">代币</string>
    <string name="tabHistory">历史记录</string>
    <string name="tabSetting">设置</string>
    <string name="tabDApp">浏览</string>

    <string name="wf_myAddress">地址</string>
    <string name="wf_available">可用</string>
    <string name="wf_unbonding">赎回中</string>
    <string name="wf_reward">收益</string>
    <string name="wf_delegate">委托</string>
    <string name="wf_vote">投票</string>
    <string name="wf_currentPrice">当前价格</string>
    <string name="wf_gecko">(CoinGecko)</string>
    <string name="wf_inflation">通货膨胀</string>
    <string name="wf_averageYield">预计年化收益</string>
    <string name="wf_dipperNetwork">Dipper Network</string>
    <string name="wf_dipperNetworkDesc">跨链和DeFi技术支持的去中心化区块链网络</string>
    <string name="wf_home">主页</string>
    <string name="wf_medium">Medium</string>
    <string name="wf_send">转账</string>

    <string name="tf_total">合计</string>
    <string name="tf_tokens">代币集</string>

    <string name="df_dapp">DApp</string>
    <string name="df_dipsyn">合成资产</string>
    <string name="df_dipdex">交易所</string>
    <string name="df_dipbank">银行</string>

    <string name="sf_wallet">钱包</string>
    <string name="sf_walletManage">钱包管理</string>

    <string name="sf_general">普通</string>
    <string name="sf_appLock">App锁</string>
    <string name="sf_open">开</string>
    <string name="sf_close">关</string>
    <string name="sf_currency">货币</string>
    <string name="sf_cny">人民币</string>
    <string name="sf_basePrice">基本价格</string>
    <string name="sf_gecko">(CoinGecko)</string>
    <string name="sf_support">支持</string>
    <string name="sf_faq">FAQ</string>
    <string name="sf_telegram">Telegram</string>
    <string name="sf_explorer">区块链浏览器</string>
    <string name="sf_dipperNetwork">Dipper Network</string>
    <string name="sf_appInfo">关于APP</string>
    <string name="sf_terms">条款和政策</string>
    <string name="sf_openSource">源代码(Github)</string>
    <string name="sf_version">版本</string>

    <string name="ta_transaction">转账</string>
    <string name="ta_receiveAddress">收款地址</string>
    <string name="ta_inputToAddress">请输入对方地址</string>
    <string name="ta_amountDip">数量/DIP</string>
    <string name="ta_inputAmount">请输入转账数量</string>
    <string name="ta_balance">余额</string>
    <string name="ta_invalidAddress">地址无效</string>

    <string name="tda_transactionDetail">交易详情</string>
    <string name="tda_state">状态</string>
    <string name="tda_blockHeight">区块高度</string>
    <string name="tda_messageSize">消息长度</string>
    <string name="tda_gasUsedAndWanted">费用</string>
    <string name="tda_transactionHash">交易Hash</string>

    <string name="tda_myAddress">地址</string>
    <string name="tda_available">可用</string>
    <string name="tda_delegate">委托</string>
    <string name="tda_unbonding">赎回中</string>
    <string name="tda_reward">收益</string>
    <string name="tda_send">转账</string>

    <string name="da_delegation">委托</string>
    <string name="da_validatorAddress">验证人地址</string>
    <string name="da_delegateAmount">委托数量</string>
    <string name="da_availableBalance">可用余额</string>
    <string name="da_inputDelegateAmount">请输入委托数量</string>

    <string name="ra_redelegate">转委托</string>
    <string name="ra_selectValidator">选择验证人</string>
    <string name="ra_clickSelectValidator">点击选择验证人</string>
    <string name="ra_redelegateAmount">转委托数量</string>
    <string name="ra_inputRedelegateAmount">请输入转委托数量</string>
    <string name="ra_redelegateMaxAmount">最多可转委托</string>
    <string name="ra_sameValidator">同一个验证人</string>
    <string name="ra_overMaxAmount">超出最大数量</string>
    <string name="ra_pleaseSelectvalidator">请选择验证人</string>

    <string name="ua_undelegate">取消委托</string>
    <string name="ua_validatorAddress">验证人地址</string>
    <string name="ua_undelegateAmount">解委托数量</string>
    <string name="ua_inputUndelegateAmount">请输入解委托数量</string>
    <string name="ua_undelegateMaxAmount">最多可解委托</string>
    <string name="ua_overMaxAmount">超出最大数量</string>

    <string name="dda_delegationDetail">委托详情</string>
    <string name="dda_delegateTotalAmount">已委托总数（DIP）</string>
    <string name="dda_waitReceiveReward">待领取奖励（DIP）</string>
    <string name="dda_selfShares">自抵押总数</string>
    <string name="dda_timeRemaining">剩余时间</string>
    <string name="dda_redelegate">转委托</string>
    <string name="dda_undelegate">取消委托</string>
    <string name="dda_receiveReward">领取奖励</string>
    <string name="dda_delegate">委托</string>
    <string name="dda_unbond">待解托</string>

    <string name="rra_receiveReward">领取奖励</string>
    <string name="rra_validatorAddress">验证人地址</string>
    <string name="rra_estimate">预计领取</string>
    <string name="rra_receiveRewardTip">预计领取数量为估算结果，领取数量以实际交易为准</string>
    <string name="rra_receiveAddress">收款地址</string>
    <string name="rra_invalidValidatorAddress">验证人地址无效</string>
    <string name="rra_invalidReceiveAddress">领取地址无效</string>

    <string name="pa_proposalList">提案清单</string>
    <string name="pa_proposalPassed">通过</string>
    <string name="pa_proposalRejected">未通过</string>
    <string name="pa_proposalFailed">未通过</string>
    <string name="pa_proposalDepositPeriod">抵押阶段</string>
    <string name="pa_proposalVotingPeriod">投票阶段</string>

    <string name="pda_proposalDetail">提案详情信息</string>
    <string name="pda_proposer">提案人</string>
    <string name="pda_proposalType">提案类型</string>
    <string name="pda_voteStartTime">投票开始时间</string>
    <string name="pda_voteEndTime">投票截止时间</string>
    <string name="pda_description">描述</string>
    <string name="pda_myVote">我的意见</string>
    <string name="pda_yes">同意</string>
    <string name="pda_no">不同意</string>
    <string name="pda_noWithVote">强烈反对</string>
    <string name="pda_abstain">弃权</string>

    <string name="va_validator">验证人</string>
    <string name="va_my">我的</string>
    <string name="va_allValidator">全部</string>

    <string name="mvf_delegate">委托</string>
    <string name="mvf_unbonding">赎回中</string>
    <string name="mvf_reward">收益</string>

    <string name="vda_validatorDetail">验证人详情</string>
    <string name="vda_selfShares">自抵押总数</string>
    <string name="vda_delegate">委托</string>
    <string name="vda_unbonding">赎回中</string>
    <string name="vda_undelegate">取消委托</string>
    <string name="vda_redelegate">转委托</string>
    <string name="vda_reward">收益</string>
    <string name="vda_redeemReward">赎回收益</string>
    <string name="vda_delegateReward">复投收益</string>

    <string name="ta_tokens">代币</string>
    <string name="ta_addToken">添加代币</string>

    <string name="ata_tokenAddress">代币地址</string>
    <string name="ata_tokenName">代币符号</string>
    <string name="ata_decimalPlaces">精确小数点</string>
    <string name="ada_next">下一步</string>

    <string name="cpa_createPassword">创建密码</string>
    <string name="cpa_password">密码</string>
    <string name="cpa_inputPassword">请输入密码</string>
    <string name="cpa_passwordFormat">8~16位字符，且为数字和字母的组合</string>
    <string name="cpa_inputConfirmPassword">请再次输入密码</string>
    <string name="cpa_passwordFormatError">密码格式错误</string>
    <string name="cpa_passwordNotEqual">两次密码不一致</string>
    <string name="cpa_addFingerprintVerification">是否添加指纹验证？</string>
    <string name="cpa_saveFingerprintFailed">保存指纹失败</string>

    <string name="cwa_createWallet">创建钱包</string>
    <string name="cwa_walletAddress">钱包地址</string>
    <string name="cwa_walletName">钱包名字</string>
    <string name="cwa_inputWalletName">请输入钱包名字</string>
    <string name="cwa_walletNameFormat">1-12个字符</string>
    <string name="cwa_walletNameFormatError">钱包名称格式错误</string>
    <string name="cwa_setPassword">请先设置密码</string>

    <string name="iwa_importWallet">导入钱包</string>
    <string name="iwa_walletName">钱包名字</string>
    <string name="iwa_inputWalletName">请输入钱包名字</string>
    <string name="iwa_walletNameFormat">1-12个字符</string>
    <string name="iwa_walletNameFormatError">钱包名称格式错误</string>
    <string name="iwa_invalidMnemonic">助记词无效</string>
    <string name="iwa_mnemonicNotCompleted">24个助记词未完成</string>
    <string name="iwa_addressAdded">此账户已添加到设备</string>
    <string name="iwa_setPassword">请先设置密码</string>

    <string name="wma_walletManage">钱包管理</string>
    <string name="wma_createWallet">创建钱包</string>
    <string name="wma_importWallet">导入钱包</string>

    <string name="wda_walletManage">钱包管理</string>
    <string name="wda_walletAddress">钱包地址</string>
    <string name="wda_chainInfo">链信息</string>
    <string name="wda_importTime">导入日期</string>
    <string name="wda_chainPath">关键路径</string>
    <string name="wda_importState">导入状态</string>
    <string name="wda_backupMnemonic">备份助记词</string>
    <string name="wda_deleteWallet">删除钱包</string>
    <string name="wda_updateWalletName">修改钱包名字</string>
    <string name="wda_inputNewWalletName">请输入新的钱包名称</string>
    <string name="wda_updateSucceed">修改成功</string>
    <string name="wda_updateFailed">修改失败</string>
    <string name="wda_confirmDeleteWallet">确认删除钱包</string>
    <string name="wda_deleteSucceed">删除成功</string>
    <string name="wda_deleteFailed">删除失败</string>

    <string name="ba_backupMnemonic">备份助记词</string>
    <string name="ba_tip1">抄写下你的钱包助记词并妥善保管</string>
    <string name="ba_tip2">助记词用于恢复钱包或者重置钱包密码，请将它准确抄写到纸上，务必妥善保管</string>
    <string name="ba_next">下一步</string>

    <string name="bva_backupMnemonic">备份助记词</string>
    <string name="bva_verifyMnemonic">验证您备份的助记词</string>
    <string name="bva_clickMnemonic">请按顺序点击助记词，验证你备注的助记词正确无误</string>
    <string name="bva_invalidMnemonic">助记词无效</string>

    <string name="fd_verifyFingerprint">请验证指纹</string>
    <string name="fd_authenticateSucceed">验证成功</string>
    <string name="fd_authenticateFailed">验证失败</string>
    <string name="fd_inputPassword">请输入密码</string>
    <string name="fd_passwordVerification">密码验证</string>
    <string name="fd_wrongPassword">密码错误</string>

    <string name="la_fingerprint">指纹验证</string>
    <string name="la_cancelFingerprintVerification">确定取消指纹验证吗？</string>
    <string name="la_noFingerprint">没有录入指纹，请先到系统设置录入指纹</string>

    <string name="ca_restart">重启</string>
    <string name="id_inputPassword">请输入密码</string>

    <string name="digits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789</string>
    <string name="digits2">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>

    <string name="emptyLoading">加载中…</string>
    <string name="emptyNoData">暂无数据</string>
    <string name="emptyLoadFailed">加载失败</string>
    <string name="emptyNetworkUnavailable">网络异常</string>

    <string name="day">天</string>
    <string name="hour">小时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="succeed">成功</string>
    <string name="failed">失败</string>
    <string name="copySuccessful">复制成功</string>
    <string name="balance">余额</string>
    <string name="notEnough">余额不足</string>
    <string name="fee">费用</string>
    <string name="amountFormatError">数量格式错误</string>
    <string name="time">时间</string>
    <string name="copy">复制</string>
    <string name="all">全部</string>
    <string name="shares">投票权</string>
    <string name="rate">佣金率</string>
    <string name="memo">备注</string>
    <string name="detail">详情</string>
    <string name="about">关于</string>
    <string name="scan">扫码</string>
    <string name="dip">DIP</string>
</resources>
