<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.RedeemRewardActivity">

    <include layout="@layout/include_toolbar" />

    <TextView
        style="@style/InputViewName"
        android:layout_marginTop="@dimen/activityPadding"
        android:text="@string/rra_validatorAddress" />

    <EditText
        android:id="@+id/etValidatorAddress"
        style="@style/InputViewContent"
        android:enabled="false" />

    <include layout="@layout/include_input_line" />

    <TextView
        style="@style/InputViewName"
        android:layout_marginTop="32dp"
        android:text="@string/rra_estimate" />

    <EditText
        android:id="@+id/etAmount"
        style="@style/InputViewContent"
        android:enabled="false" />

    <include
        android:id="@+id/amountLine"
        layout="@layout/include_input_line" />

    <TextView
        style="@style/InputViewTip"
        android:text="@string/rra_receiveRewardTip" />

    <TextView
        style="@style/InputViewName"
        android:layout_marginTop="32dp"
        android:text="@string/rra_receiveAddress" />

    <EditText
        android:id="@+id/etReceiveAddress"
        style="@style/InputViewContent"
        android:digits="@string/digits" />

    <include
        android:id="@+id/receiveAddressLine"
        layout="@layout/include_input_line" />

    <com.hao.library.view.RoundTextView
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginLeft="@dimen/activityPadding"
        android:layout_marginTop="48dp"
        android:layout_marginRight="@dimen/activityPadding"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="@dimen/buttonText"
        app:roundTextViewBorderColor="@color/btnBorderColor"
        app:roundTextViewBorderWidth="@dimen/buttonBorder"
        app:roundTextViewNormalTextColor="@color/btnTextColor"
        app:roundTextViewRadius="@dimen/buttonRadius" />
</LinearLayout>