<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.UndelegateActivity">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:id="@+id/llAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/InputViewName"
            android:text="@string/ra_selectValidator" />

        <EditText
            android:id="@+id/etAddress"
            style="@style/InputViewContent"
            android:hint="@string/ra_clickSelectValidator"
            android:enabled="false" />

        <include layout="@layout/include_input_line" />
    </LinearLayout>

    <TextView
        style="@style/InputViewName"
        android:layout_marginTop="32dp"
        android:text="@string/ra_redelegateAmount" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etAmount"
            style="@style/InputViewContent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/ra_inputRedelegateAmount"
            android:inputType="number"
            android:maxLength="19"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/all"
            android:textColor="@color/textPrimary"
            android:textSize="14sp"
            android:visibility="gone" />
    </LinearLayout>

    <include
        android:id="@+id/amountLine"
        layout="@layout/include_input_line" />

    <TextView
        android:id="@+id/tvMaxAmount"
        style="@style/InputViewTip" />

    <TextView
        style="@style/InputViewName"
        android:layout_marginTop="32dp"
        android:text="@string/memo" />

    <EditText
        android:id="@+id/etMemo"
        style="@style/InputViewContent"
        android:layout_marginTop="8dp"
        android:hint="@string/memo"
        android:inputType="text"
        android:maxLength="100" />

    <include
        android:id="@+id/memoLine"
        layout="@layout/include_input_line" />

    <com.hao.library.view.RoundTextView
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginLeft="@dimen/activityPadding"
        android:layout_marginTop="48dp"
        android:layout_marginRight="@dimen/activityPadding"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/confirm"
        android:textSize="@dimen/buttonText"
        app:roundTextViewBorderColor="@color/btnBorderColor"
        app:roundTextViewBorderWidth="@dimen/buttonBorder"
        app:roundTextViewNormalTextColor="@color/btnTextColor"
        app:roundTextViewRadius="@dimen/buttonRadius" />
</LinearLayout>