<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.WelcomeActivity">

    <include layout="@layout/include_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activityPadding"
        android:background="@drawable/shape_block"
        android:orientation="vertical"
        android:padding="@dimen/blockPadding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tda_state"
                android:textColor="@color/textGray"
                android:textSize="12sp" />

            <View
                android:id="@+id/statePoint"
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/tvState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textWhite"
                android:textSize="12sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tda_blockHeight"
                android:textColor="@color/textGray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvBlockHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:textColor="@color/textWhite"
                android:textSize="12sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tda_messageSize"
                android:textColor="@color/textGray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvMessageSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:textColor="@color/textWhite"
                android:textSize="12sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/fee"
                android:textColor="@color/textGray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvFee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:textColor="@color/textWhite"
                android:textSize="12sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/time"
                android:textColor="@color/textGray"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:textColor="@color/textWhite"
                android:textSize="12sp" />
        </FrameLayout>

        <include layout="@layout/include_block_line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/blockPadding"
            android:text="@string/tda_transactionHash"
            android:textColor="@color/textGray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvTransactionHash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/textWhite"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/memo"
            android:textColor="@color/textGray"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvMemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/textWhite"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>